added smooth scroll

--- a/css/style.css
+++ b/css/style.css
@@ -1011,7 +1011,7 @@ body .contactMe .address {
   body header .intro a {
     text-decoration: none;
     font-size: 2em;
-    color: green;
+    color: white;
     padding: 0 1em 0 0em;
   }
   body header .intro a:hover {
