--- a/css/style.scss
+++ b/css/style.scss
@@ -1281,7 +1281,7 @@ body{
             a{
                 text-decoration: none;
                 font-size: 2em;
-                color: green;
+                color: white;
                 padding: 0 1em 0 0em;
             }
 
